Slight process code alterations